fix: update config detection to use opencode.jsonc and improve JSONC parsing

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@opencode-ai/plugin": "^1.0.162",
+    "jsonc-parser": "^3.3.1",
     "supermemory": "^4.0.0"
   },
   "devDependencies": {
